# PowerInfer

./: .gitignore  cycle.json  justfile  llama.cpp  llama.h  out.json  runall.sh  runall_mac.sh
common/: common.cpp
dumpbins_bamboo_dpo/: simulation.json  simulation_remap.json
examples/: CMakeLists.txt
examples/gpuidx/: CMakeLists.txt  gpuidx_export.cpp
gguf-py/gguf/: constants.py  gguf_reader.py
gpuidx/: bamboo-7b-dpo-v0.1.powerinfer.gguf.generated.gpuidx  bamboo-7b-v0.1.powerinfer.gguf.generated.gpuidx  llama-7b-relu.powerinfer.gguf.generated.gpuidx
paper/: draft.md
parse_histogram/: Cargo.toml  build.rs
parse_histogram/completions/: _parse_histogram  _parse_histogram.ps1  parse_histogram.bash  parse_histogram.elv  parse_histogram.fish
parse_histogram/scripts/: generate_remap.py
parse_histogram/src/: cli.rs  lib.rs  main.rs
scripts/: analyze_dump_bin.py  convert_sparse_dump.py  convert_sparse_dump_simple.py  download_dataset.py  download_model.sh  download_models.sh  draw_data.py  husky3_path.py  husky5_path.py  mac_path.py  parse_stat_to_cycle.py  pim_simulation.py  read_gpuidx.py  read_gpuidx_torch.py  run_sparse_dump.sh  run_sparse_dump_bin.py  run_sparse_dump_bin.sh
